CMS-631: Spacing fixes

--- a/frontend/src/router/pages/ParkDetails.scss
+++ b/frontend/src/router/pages/ParkDetails.scss
@@ -8,10 +8,6 @@
       margin-bottom: var(--layout-margin-large);
       display: flex;
       gap: var(--layout-margin-medium);
-
-      .feature-icon {
-        height: 1.25em;
-      }
     }
   }
 
